index.css
@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap');
:root{
--bright-orange:hsl(31, 77%, 52%);
--dark-cyan:hsl(184, 100%, 22%);
--very-dark-cyan:hsl(179, 100%, 13%);
--white:hsla(0, 0%, 100%, 0.75);
--light-gray:hsl(0, 0%, 95%);
}
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
body{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
    background-color: var(--light-gray);
}
.container {
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    flex-wrap: wrap;
    border-radius: 1rem;
}
.sr-only {
    position: absolute;
    left: -9999px;
    top: -9999px;
  }
img {
    width: 64px;
    height: 40px;
    display: block;
    margin: 3rem 0 0 3rem;
}
h2 {
    font-family: 'Big Shoulders Display', cursive, 'sans-serif';
    font-size: 3rem;
    margin: 0 2rem 0 3rem;
    padding-top: 2rem;
    color: var(--light-gray);
}
p {
    font-family: 'Lexend Deca', 'sans-serif';
    font-size: 1rem;
    color: var(--white);
    line-height: 1.8rem;
    padding: 0 3rem 3rem 3rem;
}
button {
    font-family: 'Lexend Deca', 'sans-serif';
    font-size: 1rem;
    border-radius: 5rem;
    margin: 7rem 0 0 4rem;
    padding: 0.8rem 2rem; 
    background-color: var(--light-gray);
    border: solid var(--light-gray);
    transition: 0.5s;
    mix-blend-mode: screen;
}
.sedan-card button:hover, .suv-card button:hover,.luxury-card button:hover{
    cursor: pointer;
    background-color: transparent;
    transition: background-color 0.5s;
    border: solid var(--light-gray);
    color: var(--light-gray);
}
.sedan-card, .suv-card, .luxury-card{
    width: 20rem;
    height: 35rem;
}
.sedan-card{
    background-color:var(--bright-orange);
}
.suv-card{
    background-color:var(--dark-cyan);
}
.luxury-card{
    background-color:var(--very-dark-cyan);
}
.attribution { 
    font-size: 15px; 
    text-align: center;
    margin-top: 2rem;
}
.attribution a { 
    color: hsl(228, 45%, 44%); 
}
@media only screen and (max-width: 768px) {
    .container {
        grid-template-columns: 1fr;
    } 
    .sedan-card, .suv-card, .luxury-card{
        height: 28rem;
    }
    button{
       margin-top: 0rem;
        
    }
}

